# llhd-egglog

./: .gitignore  Brewfile  Cargo.toml  LICENSE  README.md  devbox.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: egglog-debug.md
src/: cfg_skeleton.rs  egglog_schema.rs  egglog_unit.rs  egraph.rs  lib.rs
src/cfg/: builder.rs  mod.rs  skeleton.rs
src/egglog/: ast.rs  debug.rs  deserialize.rs  mod.rs  names.rs  parse.rs  program.rs  pure_dfg.rs  serialize.rs  terms.rs  types.rs
src/egraph/: mod.rs  opcode.rs  unit.rs
src/schema/: cfg.rs  dfg.rs  mod.rs  vec_value.rs
tests/: 2and_1or_common_extracted.llhd  div_extract_integration.rs  div_extract_with_cfg.llhd  div_extract_with_cfg.rs  div_extract_with_cfg_extracted.llhd  llhd_div_extract_schedule.egg  roundtrip_cfg_egraph.rs  roundtrip_unit_egglog.rs
tests/common/: mod.rs
